fix(FlexBox): correct align/justify values

--- a/packages/core/css/_flexbox.css
+++ b/packages/core/css/_flexbox.css
@@ -11,7 +11,7 @@
     --gutter: theme(spacing.2);
     padding: var(--gutter);
   }
-  .ax-flexbox[data-fluid="false"] {
+  .ax-flexbox:not([data-fluid="true"]) {
     @apply container mx-auto;
   }
 
@@ -44,32 +44,6 @@
   @apply flex-col-reverse;
 }
 
-.ax-row[data-align="start"] {
-  @apply items-start;
-}
-.ax-row[data-align="end"] {
-  @apply items-end;
-}
-.ax-row[data-align="middle"] {
-  @apply items-center;
-}
-.ax-row[data-align="stretch"] {
-  @apply items-stretch;
-}
-
-.ax-row[data-justify="start"] {
-  @apply justify-start;
-}
-.ax-row[data-justify="end"] {
-  @apply justify-end;
-}
-.ax-row[data-justify="center"] {
-  @apply justify-center;
-}
-.ax-row[data-justify="spaced"] {
-  @apply justify-between;
-}
-
 .ax-col--auto {
   @apply flex-initial;
 }
@@ -78,19 +52,6 @@
 }
 .ax-col--full {
   flex: 1 1 100%;
-}
-
-.ax-col[data-align="start"] {
-  @apply self-start;
-}
-.ax-col[data-align="end"] {
-  @apply self-end;
-}
-.ax-col[data-align="middle"] {
-  @apply self-center;
-}
-.ax-col[data-align="stretch"] {
-  @apply self-stretch basis-1/12;
 }
 
 .gutter--none {
